added Form Fragment and Activity
added Form Fragment and Activity, currently save object to parse

--- a/Parse-Starter-Project-1.9.3/ParseStarterProject/AndroidManifest.xml
+++ b/Parse-Starter-Project-1.9.3/ParseStarterProject/AndroidManifest.xml
@@ -31,6 +31,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ListActivtiy"/>
+        <activity android:name=".HeroFormActivity"/>
     </application>
 
 </manifest>
