Created Detail Fragment and Activity
Created Detail Fragment and Activity, was able to get list to show on
list view but does not update without logging out and in again, Detail
Fragment causes force close

--- a/Parse-Starter-Project-1.9.3/ParseStarterProject/AndroidManifest.xml
+++ b/Parse-Starter-Project-1.9.3/ParseStarterProject/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </activity>
         <activity android:name=".ListActivtiy"/>
         <activity android:name=".HeroFormActivity"/>
+        <activity android:name=".DetailActivity"/>
     </application>
 
 </manifest>
